チャット画面のフロント実装

--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -14,8 +14,43 @@
 </div>
 </div>
 <div class="room">
-<a href="room-name">
+<div class="room-name">
 <a href="#">techroom2</a>
+</div>
+</div>
+<div class="room">
+<div class="room-name">
+<a href="#">techroom3</a>
+</div>
+</div>
+<div class="room">
+<div class="room-name">
+<a href="#">techroom4</a>
+</div>
+</div>
+<div class="room">
+<div class="room-name">
+<a href="#">techroom4</a>
+</div>
+</div>
+<div class="room">
+<div class="room-name">
+<a href="#">techroom5</a>
+</div>
+</div>
+<div class="room">
+<div class="room-name">
+<a href="#">techroom6</a>
+</div>
+</div>
+<div class="room">
+<div class="room-name">
+<a href="#">techroom7</a>
+</div>
+</div>
+<div class="room">
+<div class="room-name">
+<a href="#">techroom8</a>
 </div>
 </div>
 </div>
